# mypy_primer

./: requirements.txt  setup.cfg
mypy_01/: annotations.py  basics.py  generics.py  new_types.py
