[metadata]
name = Mypy 01
description = Static typing in python intro

[options]
python_requires ~= 3.8.0
packages = find:
include_package_data = true
zip_safe = true
setup_requires =
    setuptools
    wheel
install_requires =
    black
    flake8
    flake8-bugbear
    flake8-builtins
    flake8-mutable
    flake8-pyi
    isort
    mypy
    typing_extensions

[flake8]
max-line-length = 130
ignore = F821,Y010
select = A,B,C,E,F,M,W,Y,B902,Y090,Y091,Y092

[mypy]
python_version=3.8
strict = True
ignore_errors = False
ignore_missing_imports = False
no_implicit_optional = False
implicit_reexport = False
namespace_packages = True
warn_no_return = False
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True
warn_unused_configs = True
warn_unused_ignores = True
